--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "@material/form-field": "^13.0.0",
     "@material/textfield": "^13.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "js-cookie": "^3.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
